# code-katas

./: .gitignore  README.md  update-all.sh  update-composer.sh
2021-04-01/fizz-buzz-kata/: README.md
2021-04-01/fizz-buzz-kata/src/: FizzBuzz.php
2021-04-29/string-calculator-kata/: README.md
2021-04-29/string-calculator-kata/src/: Adder.php
legacy/: README.md
legacy/gilded-rose-refactoring/: README.md
legacy/gilded-rose-refactoring/php/: README.md  composer.json  phpstan.neon  phpunit.xml
legacy/import-users/: README.md
legacy/import-users/php/: run.php
legacy/import-users/tests/: ImportUsersRunCommandTest.php
legacy/tennis-refactoring/: README.md
legacy/tennis-refactoring/javascript/: .gitignore  package.json  tennis.test.js  tennis2.js  tennis3.js
legacy/tennis-refactoring/php/: composer.json
legacy/tennis-refactoring/tests/: TennisGameTest.php
legacy/yatzy-refactoring/: README.md
tdd/: README.md
tdd/bundle-configurator/: README.md
tdd/do-the-shuffle/: README.md
tdd/financial-data/: README.md
tdd/fizz-buzz/: README.md  composer.json
tdd/fractions/: README.md  composer.json
tdd/guess-random-number/: README.md
tdd/leap-year/: README.md
tdd/password-validator/: README.md  composer.json
tdd/password-validator/cpp/: CMakeLists.txt  README  password_validator.cpp  password_validator_test.cpp
tdd/path-finding/: README.md
tdd/roman-numerals/: README.md  composer.json
tdd/stack-kata/: README.md
tdd/string-calculator/: README.md  composer.json
tdd/text-processing/: README.md
tdd/word-wrap/: README.md
(+167 files in other folders)
